@@ -1,3 +1,10 @@
+2011-04-01  Corinna Vinschen  <corinna@vinschen.de>
+
+	* Makefile.in (DLL_OFILES): Add avapi32.o.
+	* advapi32.cc: New file.
+	* autoload.cc: Add block of remaining advapi32 functions used by
+	Cygwin.  Keep commented out.  Explain why.
+
 2011-04-01  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* fhandler_proc.cc (format_proc_loadavg): Add running/total
